--- a/src/blocks/profile/__button-edit/profile__button-edit.css
+++ b/src/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,9 +1,8 @@
 .profile__button-edit {
   width: 24px;
   height: 24px;
-  margin: 0;
   padding: 0;
-  margin-bottom: 8px;
+  margin: 0 0 8px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,6 +26,6 @@
     width: 18px;
     height: 18px;
     margin-bottom: 2px;
-    background-size: 7.5px;
+    background-size: 7px;
   }
 }
