--- a/src/blocks/profile/__group/profile__group.css
+++ b/src/blocks/profile/__group/profile__group.css
@@ -1,10 +1,9 @@
 .profile__group {
   max-width: 100%;
-  margin: 0;
   padding: 0;
   display: flex;
   align-items: flex-end;
-  margin-top: 20px;
+  margin: 20px 0 0;
   gap: 18px;
   /*border: 1px solid red;*/
 }
