--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0;
-  margin-left: 3.5px;
+  margin: 0 0 0 4px;
   padding: 0;
   gap: 7px;
   /*border: 1px solid rgb(255, 0, 0);*/
