--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -6,7 +6,7 @@
 
 @import url(../../blocks/root/root.css);
 
-@import url(../../blocks/header/header.css);
+@import url(../../../../sprintRussia/blocks/header/header.css);
 @import url(../../blocks/header/__logo/header__logo.css);
 
 @import url(../../blocks/profile/profile.css);
